--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,1 +1,6 @@
+@import './abstracts/variables';
+@import './base/base';
+@import './base//utilities';
+@import './layout/grid';
 @import './components/header';
+@import './components/card';
