--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -19,3 +19,8 @@ $default-font-size: 1.6rem;
 $default-font-family: 'Lato';
 $default-font-weight: 500;
 $default-line-height: 1.7;
+
+//GRID
+$grid-width: 114rem;
+$gutter-vertical: 8rem;
+$gutter-horizontal: 6rem;
