--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -8,7 +8,6 @@ body {
   font-weight: $default-font-weight;
   line-height: $default-line-height;
   color: $color-gray-dark;
-  padding: 3rem;
   box-sizing: border-box;
 }
 
@@ -18,4 +17,10 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: inherit;
+}
+
+main {
+  padding-top: $header-height;
+  max-width: $grid-width;
+  margin: 0 auto 5rem;
 }
