--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,9 +1,14 @@
 @import './abstracts/variables';
 @import './abstracts/mixins';
+
 @import './base/base';
 @import './base//utilities';
+
 @import './layout/grid';
+
 @import './components/header';
 @import './components/card';
 @import './components/select';
+@import './components/infinite-scroll';
+
 @import './pages/detail';
